# Linguistic_RAG

./: .gitignore  LICENSE  README.md  app_gradio.py  config.py  download_model.py  knowledge_base.py  main.py  model_loader.py  pyproject.toml  query_rewriter.py  requirements.txt  start_frontend.sh  start_generator_vllm.sh  start_generator_vllm.sh.sh  start_reranker.sh  start_rewriter_vllm.sh  start_server.sh  test.py
Gradio_UI/: app.py
knowledge_base/: [OCR]_中国音韵学研究 (（瑞典）高本汉著；赵元任，罗常培，李方桂译, Gao Benhan zhu etc.) (Z-Library)_20250610_1856.txt  [OCR]_乔姆斯基语言学文集 ([美国] 诺姆·乔姆斯基) (Z-Library)_20250409_0821.txt  [OCR]_句法结构 (诺姆·乔姆斯基) (Z-Library)_20250409_0820.txt  [OCR]_普通语言学教程 (费尔迪南·德·索绪尔,Ferdinand de Saussure) (Z-Library)_20250409_0842.txt  [OCR]_王力全集 汉语音韵 音韵学初步 (王力) (Z-Library)_20250610_1922.txt  [OCR]_语言学名词, 2011 (语言学名词审定委员会) (Z-Library)_20250409_0835.txt  [OCR]_音韻學教程（第五版） (唐作藩) (Z-Library)_20250610_1850.txt  语义学.txt  语言学概论 (高名凯 石安石) (Z-Library).txt  语言学概论.txt
knowledge_base/.ipynb_checkpoints/: [OCR]_汉语音韵学常识 (唐作藩) (Z-Library)_20250610_1921-checkpoint.txt  [OCR]_语言学概论 (高名凯, 石安石) (Z-Library)_20250511_1503-checkpoint.txt  [OCR]语言学概论（杨亦鸣）_20250511_1509-checkpoint.txt
preporcess/: build_core_indexes.py  generate_summary_question.py  optimize_chunk_b_via_vllm.py  preprocess_documents.py
preprocess/: build_core_indexes.py  convert_epub.py  generate_summary_question.py  llm_chunk_processor.py  optimize_chunk_b_via_vllm.py  preprocess_documents.py
processed_knowledge_base/: chunks.json  sparse_weights.pkl
prompts/: generator_system_prompt.txt  rewriter_instruction.txt  useful_judge.txt
script/: config.py  config_rag.py  knowledge_base.py  main.py  model_loader.py  query_rewriter.py  rag_pipeline.py  streamer.py  test.py  text_processing.py  useful_judger.py  vllm_clients.py
web_ui/: app.py  chat_interface.py  event_handlers.py  layout.py  sidebar.py  ui_components.py
